content/consul/v1.10.x/content/commands/intention/delete.mdx
---
layout: commands
page_title: 'Commands: Intention Delete'
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2026-07-14T23:21:06.000Z
# END AUTO GENERATED METADATA
---

# Consul Intention Delete

Command: `consul intention delete`

The `intention delete` command deletes a matching intention.

-> **Deprecated** - The one argument form of this command is deprecated in
Consul 1.9.0. Intentions no longer need IDs when represented as
[`service-intentions`](/consul/docs/connect/config-entries/service-intentions) config
entries.

## Usage

Usage:

- `consul intention delete [options] SRC DST`
- `consul intention delete [options] ID`

`SRC` and `DST` can both take [several forms](/consul/commands/intention#source-and-destination-naming).

#### API Options

@include 'http_api_options_client.mdx'

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

## Examples

Delete an intention from "web" to "db" with any action:

```shell-session
$ consul intention delete web db
```

Delete an intention by unique ID:

```shell-session
$ consul intention delete 4ffed935-439c-695d-4f51-f4fc0b12a7a7
```
